react-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kaurgak-mu-aks-react
  namespace: kaurgak
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: 'true'
spec:
  type: LoadBalancer
  selector:
    app: kaurgak-mu-aks-react
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
