react-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ingress
  namespace: kaurgak
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - student4.aks-mu.manulife.com
      secretName: kaurgak-tls
  rules:
    - host: student4.aks-mu.manulife.com
      http:
        paths:
          - pathType: Prefix
            path: /    
            backend:
              service:
                name: kaurgak-mu-aks-react
                port: 
                  number: 80
